styles/Home.module.css
.container {
  @apply min-h-screen max-w-5xl flex mx-auto justify-center items-center flex-col text-slate-100;
}

.header {
  @apply min-h-[30vh]
  relative
    /* md:min-h-0 */
    px-4
    py-6
    text-center w-full flex-grow items-center flex flex-col
    justify-center  text-slate-300;
}

.headerBg {
  @apply absolute w-full h-full opacity-10 bg-cover bg-center -z-10;
}

.albumart {
  @apply mb-6 shadow-xl max-w-[90%] max-h-[30vh] shadow-black/50;
}

.title {
  @apply font-bold text-2xl mb-1 text-slate-100;
}

.author {
  @apply text-lg;
}

.gridwrapper {
  @apply grid grid-cols-1 w-full;
}

.card {
  @apply bg-slate-100 text-center px-4 py-4

  border-b-slate-200
  border-b-[1px]

  text-slate-700
  transition-all

  shadow-inner

  bg-gradient-to-t
  from-slate-100
  to-white

  hover:from-slate-200

  flex
  justify-between;
}

.serviceImg {
  @apply block h-auto w-auto max-w-[6rem] object-contain;
}

.playbutton {
  @apply px-4 py-2 border-slate-300 border-[1px] rounded-md bg-gradient-to-t
  from-slate-100
  to-white;
}

